Add tariffs cards (target) 101746

--- a/dev/pug/modules/smm/smm-price-table.pug
+++ b/dev/pug/modules/smm/smm-price-table.pug
@@ -21,23 +21,23 @@
                 {
                     title: 'Разработка продающего описания для сообществ',
                     boolean: true,
-                    start: '',
+                    start: '1',
                     optima: '1',
                     vip: '1'
                 },
                 {
                     title: 'Разработка и согласование концепции дизайна сообществ',
                     boolean: true,
-                    start: '',
-                    optima: '',
+                    start: '1',
+                    optima: '1',
                     vip: '1'
                 },
                 {
                     title: 'Настройка функционала сообществ',
-                    boolean: false,
-                    start: '10 постов/месяц',
-                    optima: '15 постов/месяц',
-                    vip: '15 постов/месяц'
+                    boolean: true,
+                    start: '1',
+                    optima: '1',
+                    vip: '1'
                 },
                 {
                     title: 'Настройка функционала сообществ',
@@ -45,6 +45,53 @@
                     start: '2 поста',
                     optima: '3 поста',
                     vip: '5 постов'
+                }
+            ]
+        },
+        {
+            name: 'Размещение постов',
+            collapsed: false,
+            list: [
+                {
+                    title: 'Написание постов и размещение контента ',
+                    boolean: false,
+                    start: '10 постов/месяц',
+                    optima: '10 постов/месяц',
+                    vip: '10 постов/месяц'
+                },
+                {
+                    title: 'Создание инфографики',
+                    boolean: false,
+                    start: '1 в месяц',
+                    optima: '3 в месяц',
+                    vip: '4 в месяц'
+                },
+                {
+                    title: 'Создание gif-изображений',
+                    boolean: false,
+                    start: '1 в месяц',
+                    optima: '3 в месяц',
+                    vip: '4 в месяц'
+                }
+            ]
+        },
+        {
+            name: 'Проведение конкурсов, акций, интерактивов',
+            collapsed: false,
+            list: [
+                {
+                    title: 'Разработка концепции и проведение конкурсов/акций',
+                    boolean: false,
+                    start: '1 раз в 2 месяца',
+                    optima: 'Каждый месяц',
+                    vip: 'Каждый месяц'
+                },
+                {
+                    title: 'Анализ эффективности проведенных конкурсов/акций',
+                    boolean: true,
+                    start: '1',
+                    optima: '1',
+                    vip: '1'
                 }
             ]
         },
@@ -53,46 +100,39 @@
             collapsed: false,
             list: [
                 {
-                    title: 'Социальные сети',
-                    boolean: false,
-                    start: '1 соцсеть',
-                    optima: '2 соцсети',
-                    vip: '3 соцсети'
-                },
-                {
-                    title: 'Разработка стратегии продвижения в социальных сетях',
+                    title: 'Установка кода ретаргетинга на сайт',
                     boolean: true,
                     start: '1',
                     optima: '1',
                     vip: '1'
                 },
                 {
-                    title: 'Разработка продающего описания для сообществ',
+                    title: 'Формирование базы ЦА (при необходимости)',
                     boolean: true,
-                    start: '',
+                    start: '1',
                     optima: '1',
                     vip: '1'
                 },
                 {
-                    title: 'Разработка и согласование концепции дизайна сообществ',
+                    title: 'Создание рекламных объявлений и промопостов',
                     boolean: true,
-                    start: '',
-                    optima: '',
+                    start: '1',
+                    optima: '1',
                     vip: '1'
                 },
                 {
-                    title: 'Настройка функционала сообществ',
-                    boolean: false,
-                    start: '10 постов/месяц',
-                    optima: '15 постов/месяц',
-                    vip: '15 постов/месяц'
+                    title: 'Запуск рекламной кампании, A/B тестирование',
+                    boolean: true,
+                    start: '1',
+                    optima: '1',
+                    vip: '1'
                 },
                 {
-                    title: 'Настройка функционала сообществ',
-                    boolean: false,
-                    start: '2 поста',
-                    optima: '3 поста',
-                    vip: '5 постов'
+                    title: 'Отслеживание эффективности рекламных кампаний',
+                    boolean: true,
+                    start: '1',
+                    optima: '1',
+                    vip: '1'
                 }
             ]
         },
@@ -101,42 +141,28 @@
             collapsed: true,
             list: [
                 {
-                    title: 'Социальные сети',
-                    boolean: false,
-                    start: '1 соцсеть',
-                    optima: '2 соцсети',
-                    vip: '3 соцсети'
-                },
-                {
-                    title: 'Разработка стратегии продвижения в социальных сетях',
+                    title: 'Мониторинг прироста аудитории',
                     boolean: true,
                     start: '1',
                     optima: '1',
                     vip: '1'
                 },
                 {
-                    title: 'Разработка продающего описания для сообществ',
+                    title: 'Анализ качества трафика из социальных сетей',
                     boolean: true,
-                    start: '',
+                    start: '1',
                     optima: '1',
                     vip: '1'
                 },
                 {
-                    title: 'Разработка и согласование концепции дизайна сообществ',
+                    title: 'Подготовка ежемесячного отчета',
                     boolean: true,
-                    start: '',
-                    optima: '',
+                    start: '1',
+                    optima: '1',
                     vip: '1'
                 },
                 {
-                    title: 'Настройка функционала сообществ',
-                    boolean: false,
-                    start: '10 постов/месяц',
-                    optima: '15 постов/месяц',
-                    vip: '15 постов/месяц'
-                },
-                {
-                    title: 'Настройка функционала сообществ',
+                    title: 'Размещение первых постов в сообществах',
                     boolean: false,
                     start: '2 поста',
                     optima: '3 поста',
