--- a/dev/pug/smm.pug
+++ b/dev/pug/smm.pug
@@ -10,6 +10,7 @@ block content
     include modules/smm/two-col
     +taber(tabsSmm)
     include modules/topcases
+    include modules/target-price
     include modules/smm/smm-price-table
     +taber(tabsSmmStrategy, 'Составляющие SMM-стратегии', 'light')
     +feedbackSlider(keyMetrix, 'Ключевые метрики', 'feedback--rules')
