--- a/dev/static/styles/modules/popups/popups.sass
+++ b/dev/static/styles/modules/popups/popups.sass
@@ -37,6 +37,7 @@
             height: 29px
 
     &__title
+        color: $main-font-color
         font-size: 40px
         line-height: 55px
         font-weight: 100
