--- a/dev/static/styles/modules/panel-video.sass
+++ b/dev/static/styles/modules/panel-video.sass
@@ -43,6 +43,10 @@
 			line-height: 20px
 
 	&__btn
+		transition: all .5s ease-in-out
+		&:hover, &:focus
+			opacity: .8
+			transform: scale(1.05)
 		+md-block
 			+sizebox(142px)
 			min-width: 142px
