--- a/dev/static/styles/modules/smm-table.sass
+++ b/dev/static/styles/modules/smm-table.sass
@@ -35,9 +35,13 @@
 		&--collapsed
 			display: flex
 			max-width: 100%
-			justify-content: space-between
+			justify-content: flex-start
+			gap: 20px
 			align-items: center
 			cursor: pointer
+
+			&:hover
+				color: $accent
 
 			& + #{$self}__rows
 				overflow: hidden
@@ -49,9 +53,13 @@
 					max-height: 0
 
 	&__collapse-arrow
-		fill: $accent
+		color: $accent
 		transition: all .3s ease-in-out
 		pointer-events: none
+		display: inline-flex
+		align-items: center
+		justify-content: center
+		min-width: 30px
 
 		&.close
 			transform: rotateZ(180deg)
@@ -103,6 +111,20 @@
 		&--empty
 			+sm-block
 				grid-column: 1/-1
+
+		&--head
+			display: flex
+			flex-direction: column
+			gap: 5px
+			align-self: start
+
+	&__head-desc
+		font-size: 12px
+		line-height: 1.3
+		color: $black
+		font-weight: lighter
+		+sm-block
+			display: none
 
 	&__check
 		width: 18px
