--- a/dev/pug/modules/topcases.pug
+++ b/dev/pug/modules/topcases.pug
@@ -4,10 +4,10 @@ section.section
         ._wrap
             ul._tabs
                 each tab, index in topCases
-                    li.b-topcases-tab._tab(data-case-target='tab-' + (index + 1), class= index === 0 ? 'topcases-tab--active' : '')
+                    li.b-topcases-tab._tab(data-case-target='tab-' + (index + 1), class= index === 0 ? 'topcases-tab--active': '')
                         ._content
                             ._title= tab.name
-                            ._cols(class= tab.cols.length < 2 ? 'topcases-tab__cols--single' : '')
+                            ._cols(class= tab.cols.length < 2 ? 'topcases-tab__cols--single': '')
                                 each col in tab.cols
                                     ._col
                                         ._num= col.num
@@ -16,15 +16,16 @@ section.section
             ul._cards
                 each card, index in topCases
                     - let isCaruosel = card.images.length > 1
-                    li.b-topcases-card._card(class='tab-' + (index + 1), class= index === 0 ? 'topcases-card--active' : '')
+                    li.b-topcases-card._card(class='tab-' + (index + 1), class= index === 0 ? 'topcases-card--active': '')
                         ._left
-                            card.images.length
-                            ._images(class= isCaruosel ? 'owl-carousel owl-theme' : '')
+                            ._images(class= isCaruosel ? 'owl-carousel owl-theme': '')
                                 each img in card.images
-                                    img(src= img)._img
+                                    a(
+                                        data-fancybox="images" + index
+                                        href= img
+                                    )
+                                        img(src= img)._img
                         ._right
                             ._content
                                 ._text= card.text
                                 button.b-btn.-flat.-light._btn Смотреть кейс
-                            if (isCaruosel)
-                                +controlsSlider('topcases-card', 'light')
