--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -55,7 +55,7 @@
             link: 'contacts.html'
         },
     ]
-    
+
 -
     var newMega = [
         {
@@ -660,7 +660,7 @@
                     num: '+812%',
                     desc: 'прирост количества <br>заявок',
                 },
-            
+
             ],
         },
         {
@@ -695,7 +695,7 @@
                 },
             ],
         },
-    
+
     ]
 
 -
@@ -740,7 +740,44 @@
             src: 'images/content/clients/mebgrad.png',
             alt: 'Мебельград'
         },
-    
+
+    ]
+
+-
+    var newFeedbacks = [
+        {
+            photo: 'person.jpg',
+            person: 'Имя фамилия',
+            name: 'ООО «Дейта-Сервис»',
+            video: 'https://youtu.be/oQdEG9OZp2w',
+            text: 'ООО «Дейта-Сервис» благодарит Вас за разработку и сопровождение сайтов нашей компании. В ходе сотрудничества с компанией «ITC MEDIA» мы получили качественный продукт, помогающий нам в поиске новых клиентов и возможностей для развития бизнеса.',
+        },
+        {
+            photo: 'person.jpg',
+            person: 'Имя фамилия',
+            name: 'АО «ЭР-Телеком Холдинг»',
+            text: 'АО "ЭР-Телеком Холдинг" благодарит компанию ITC MEDIA за плодотворное сотрудничество по поисковому продвижению и технической поддержке сайтов bks.tv и bstk.bks.tv. Сотрудники ITC MEDIA проявляют себя как профессиональная команда.',
+            original: 'images/content/feedback/bks.jpg',
+        },
+        {
+            photo: 'person.jpg',
+            person: 'Имя фамилия',
+            name: 'ООО «Семейный доктор»',
+            text: 'Искренне признательны за добросовестное отношение, подбор и внедрение оптимальных решений по визуализации составляющей и процессу поискового продвижения сайта.',
+            original: 'images/content/feedback/doctor.png',
+        },
+        {
+            photo: 'person.jpg',
+            person: 'Имя фамилия',
+            name: 'ООО «Дятьковская Стекольная Артель»',
+            text: 'ООО Дятьковская Стекольная Артель (изготовление и продажа изделий из хрусталя и стекла) выражает свою благодарность ООО «ITC-MEDIA» Которая показала высокий уровень мастерства в разработке, создании и продвижении сайта.',
+        },
+        {
+            photo: 'person.jpg',
+            person: 'Имя фамилия',
+            name: 'ООО «Клиника «Прайм Медикал»',
+            text: 'Руководство и коллектив ООО «Клиника «Прайм Медикал» благодарит компанию ITC Media за плодотворное сотрудничество в сфере продвижения и оптимизации сайта нашей компании.',
+        },
     ]
 
 -
@@ -886,7 +923,7 @@
                 desc: 'Гарантия 6 мес',
             },
         ]
-        
+
     }
 
 -
@@ -906,7 +943,7 @@
                 desc: 'Создаём сайты с учётом требований поисковиков',
             },
         ]
-        
+
     }
 
 -
@@ -926,7 +963,7 @@
                 desc: 'Индивидуальне условия обслуживания',
             },
         ]
-        
+
     }
 
 -
@@ -946,7 +983,7 @@
                 desc: 'Финансовые гарантии!',
             },
         ]
-        
+
     }
 
 -
@@ -966,7 +1003,7 @@
                 desc: 'Передовые технологии управления',
             },
         ]
-        
+
     }
 
 -
@@ -986,7 +1023,7 @@
                 desc: 'Используем только белые методы',
             },
         ]
-        
+
     }
 
 -
@@ -1485,7 +1522,7 @@
             priceSupport: 25000
         },
     ]
-    
+
 -
     var calculator = {
         startPrice: 15000,
