--- a/dev/static/styles/styles.sass
+++ b/dev/static/styles/styles.sass
@@ -22,8 +22,6 @@ body
     font-style: normal
 //overflow: auto
 
-
-
 *,
 *::before,
 *::after
@@ -190,6 +188,8 @@ h4:not([class])
 ul:not([class])
     padding-left: 0
     margin-bottom: 20px
+    &:last-child
+        margin-bottom: 0
 
     li:not([class])
         list-style: none
