Add shadow-cards section

--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -12,6 +12,7 @@ block content
     include pages/index/counters
     include pages/index/clients
     include pages/index/accordion
+    include pages/index/shadow-card
     +newFeedback(newFeedbacks, 'Отзывы')
     include pages/index/latest-post
     include pages/index/hr
