Styling new blue hero (mobile) 109932

--- a/dev/pug/modules/page-title-hero.pug
+++ b/dev/pug/modules/page-title-hero.pug
@@ -18,7 +18,7 @@
 
 section.section.section--blue.section--wide
 	.b-blue-hero
-		h1.h1._title= title
+		h1.h1._title !{title}
 		._badges
 			each item in hero.badges
 				.b-hero-badge._badge
