--- a/dev/pug/new-med-site.pug
+++ b/dev/pug/new-med-site.pug
@@ -1,7 +1,7 @@
 extends template/main
 
 block variables
-  - var title = 'Продвижение медицинских сайтов от 30 000 ₽ с гарантией'
+  - var title = 'Продвижение медицинских сайтов <span class="gold-span">от 30 000 ₽</span> с гарантией'
   - var isBlue = true
   - var fullTitle = true
 
