--- a/dev/static/styles/styles.sass
+++ b/dev/static/styles/styles.sass
@@ -350,5 +350,8 @@ ol:not([class])
         +xs-block()
             align-self: stretch
 
+.gold-span
+    color: $gold
+
 //Модули
 @import 'modules/modules'
