Add new-feedback block 109932

--- a/dev/pug/new-med-site.pug
+++ b/dev/pug/new-med-site.pug
@@ -10,6 +10,7 @@ block content-full
 block content
     include pages/med-site/promotion
     include modules/topcases
+    +newFeedback(newFeedbacks, 'Отзывы')
     include pages/med-site/price-table
     +avideo(promAvideo)
     +taber(tabsMainSteps, 'Основные этапы работы', 'light')
