--- a/dev/static/styles/modules/index/new-feedback.sass
+++ b/dev/static/styles/modules/index/new-feedback.sass
@@ -97,14 +97,14 @@
 			justify-content: center
 			box-shadow: inset 0 0 0 1px $accent
 			transition: all .3s ease-in-out
-			+xs-block
+			+mds-block
 				width: 40px
 				height: 40px
 			svg
 				fill: $accent
 				width: 38px
 				height: 29px
-				+xs-block
+				+mds-block
 					width: 19px
 					height: 15px
 			&:hover, &:focus
